--- a/css/paginator_dark.css
+++ b/css/paginator_dark.css
@@ -1,4 +1,6 @@
-
+/**
+* Style based on http://cssdeck.com/labs/css-pagination-styles
+*/
 div.pagination {
     text-align: center;
     padding: 20px;
